# sim_ws

./: .gitignore  README.md
src/apriltag_detection_pkg/: CMakeLists.txt  package.xml
src/apriltag_detection_pkg/apriltag_detection_pkg/: apriltag_localizer.py
src/apriltag_detection_pkg/config/: apriltag_config.yaml
src/apriltag_detection_pkg/launch/: apriltag.launch.py
src/bringup_pkg/: CMakeLists.txt  package.xml
src/bringup_pkg/launch/: bringup.launch.py  send_goal.py
src/bringup_pkg/rviz/: nav2_view.rviz
src/camera_localization_pkg/: CMakeLists.txt  package.xml
src/camera_localization_pkg/camera_localization_pkg/: pose_relay.py
src/nav2_config/: package.xml
src/nav2_config/config/: nav2_params.yaml
src/nav2_config/launch/: nav2.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/materials/scripts/: apriltag.material
src/robot_description/urdf/: robot.urdf.xacro
src/simulation_pkg/: CMakeLists.txt  package.xml
src/simulation_pkg/launch/: simulation.launch.py
src/simulation_pkg/maps/: generate_map.py  shopfloor.pgm  shopfloor.yaml
src/simulation_pkg/worlds/: shopfloor.world
