<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup_pkg</name>
  <version>1.0.0</version>
  <description>Master bringup launch and RViz configuration</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>simulation_pkg</depend>
  <depend>apriltag_detection_pkg</depend>
  <depend>camera_localization_pkg</depend>
  <depend>nav2_config</depend>
  <depend>nav2_bringup</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
