<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_config</name>
  <version>1.0.0</version>
  <description>Nav2 YAML parameters for external vision-based navigation (no AMCL)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
