<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_pkg</name>
  <version>1.0.0</version>
  <description>Gazebo simulation world, maps, and launch files</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
